opam-version: "2.0"
version: "1.7~dev"
maintainer: "Xavier Leroy <xavier.leroy@inria.fr>"
authors: [
  "Valérie Ménissier-Morain"
  "Pierre Weis"
  "Xavier Leroy"
]
license: "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"
x-maintenance-intent: ["(latest)"]
homepage: "https://github.com/ocaml/num/"
bug-reports: "https://github.com/ocaml/num/issues"
dev-repo: "git+https://github.com/ocaml/num.git"
build: [
  [make "PROFILE=release"
        "opam-legacy" {!ocaml:preinstalled & ocaml:version < "5.0.0~~"}
        "opam-modern" {ocaml:preinstalled | ocaml:version >= "5.0.0~~"}]
  [make "test"] {with-test}
]
depends: [
  "ocaml" {>= "4.06.0"}
]
conflicts: [ "base-num" ]
synopsis:
  "The legacy Num library for arbitrary-precision integer and rational arithmetic"
