(library
  (name num)
  (public_name num)
  (wrapped false)
  (modules )
  (synopsis "Arbitrary-precision rational arithmetic")
  (libraries num.core))

(library
  (name num_core)
  (public_name num.core)
  (wrapped false)
  (modules arith_flags arith_status big_int int_misc nat num ratio)
  (foreign_stubs
   (language c)
   (names nat_stubs bng)
   (extra_deps (glob_files *.c))
   (flags "-DBNG_ARCH_%{architecture}")))
