(alias
  (name runtest)
  (action (progn (run %{dep:driver.bc}) (run %{dep:driver.exe}))))

(library
  (name test_lib)
  (modules test test_nats test_big_ints test_ratios test_nums test_io end_test)
  (libraries num))

(executable
  (name driver)
  (modules driver)
  (flags -linkall)
  (libraries test_lib))

(rule (with-stdout-to driver.ml (echo "")))
