(library
  (name num_top)
  (public_name num.top)
  (libraries num compiler-libs)
  (wrapped false)
  (modes byte))

(rule
  (with-stdout-to META.shim
    (progn (echo "requires = \"num.top\"\nversion = \"%{version:num}\"\ndescription = \"Add-on for num inside toploops\"\n"))))

(install
  (files (META.shim as num_top/META))
  (section lib_root))
